OPI 1.0
  - experimental, lots of bugs.
  - not really a proper R package

OPI 1.1
  - Correct R package structure
  - Introduced chooseOpi()
  - Split out Octopus 900 functions into OPIOctopus900 package
  - Contains Tutorial and pdf Manual
  - Contains FT()

OPI 1.2
  - contains ZEST()
  - Fixed a bug in SimHenson opiPresent()

OPI 1.2.1
  - Contains simDisplay to allow displaying of stims on a plot 
    in simulation mode.
  - removed nextStim=NULL bug in opiPresent.opiStaticStimulus octopus900.r

OPI 1.2.1.1
  - as for 1.2.1 but with depends rJava removed from Description

OPI 1.2.2
  - Contains multi-location ZEST

OPI 1.3
  - Contains Temporal and Kinetic in OPIPresent

OPI 1.4
  - allows for differring params to all opiXX() functions (in opiDistributor)
    but as a result, all params MUST be named in calls
  - added simYes and simNo
  - fixed "domain" bug in ZEST.start likelihood parameter
  - added minStimulus and maxStimulus to ZEST.start and internals of ZEST.step
  - added frame to opiPresent return
  - added param to opiInitialize to turn gaze tracking on/off
  - added alias opiInitialise
  - updated docs.
  - Removed .GlobalEnv and created sub Envs for each Sim
  - updated docs for opiSetBackground for Octopus 900
  - deleted opi.procedure.{load|save}
  - moved chooseOpi() into opi.r
  - NOTE - must pass junk params in .jinit() and .jpackage wont work...

OPI 1.5
  - opiPresent only returns a single frame (array of int)
  - seen returned from opiPresent is limited to 0 or 1
  - added !exist to opiDistributor
  - simHenson uses false pos rate to determine seen if db < 0 
  - changed ZEST.final to return "limit" 
  - fixed verbose=1 bug in zest.r
  - changed respSeq return type from ZEST

OPI 1.6
 - added SimHensonRT and related man and data
 - fixed ZEST bug 
 - added warnings about non-OPI parameters to opi functions